<resources>
    <string name="app_name">MsZhapa Boutique Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="enter_inventory">Enter inventory</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a piece of clothing [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a piece of clothing</string>

    <!-- Label for overflow menu option that inserts fake clothes data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all clothes data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Clothes</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">New Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for name in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Item name</string>

    <!-- Label for type information in the editor [CHAR LIMIT=30] -->
    <string name="category_type">Type</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Label for email information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_email">Supplier Email</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for photo field in the editor [CHAR LIMIT=30] -->
    <string name="add_photo">Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_clothes_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_clothes_quantity">Items in stock</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_clothes_supplier_name">Supplier Name</string
        >
    <!-- Text hint for supplier email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_clothes_supplier_email">Supplier Email</string>

    <!-- Text for EditorActivity, when the user clicked on a list item [CHAR LIMIT=30] -->
    <string name="item_detail">Selected Item Detail</string>

    <!-- Text for positive response on restock option [CHAR LIMIT=30] -->
    <string name="send_email">Send email</string>

    <!-- Text for restock option [CHAR LIMIT=30] -->
    <string name="restock">Restock</string>

    <!-- Text for restock option [CHAR LIMIT=30] -->
    <string name="sale">Sale</string>

    <!-- Text for dialog message on restock option [CHAR LIMIT=30] -->
    <string name="send_email_dialog">Would you like to send an email to supplier?</string>

    <!-- Units for price of the item (USD) [CHAR LIMIT=5] -->
    <string name="unit_price">$</string>

    <!-- Units for quantity of the item [CHAR LIMIT=5] -->
    <string name="unit_quantity">item/s</string>

    <!-- Label for dropdown menu option if the item's type is other [CHAR LIMIT=20] -->
    <string name="type_other">Other</string>

    <!-- Label for dropdown menu option if the item is pants [CHAR LIMIT=20] -->
    <string name="type_pants">Pants</string>

    <!-- Label for dropdown menu option if the item is top [CHAR LIMIT=20] -->
    <string name="type_top">Top</string>

</resources>
