<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">


        <ImageView
            android:id="@+id/display_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/pic" />

    </RelativeLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/category_overview" />

        <!-- Name field -->
        <TextView
            android:id="@+id/display_name"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:hint="@string/hint_pet_name" />

    </LinearLayout>

    <!-- Type category -->
    <LinearLayout
        android:id="@+id/container_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/category_type" />


        <!-- Gender drop-down spinner -->
        <TextView
            android:id="@+id/display_type"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:hint="@string/category_type" />

    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:orientation="horizontal">

            <!-- Weight field -->
            <TextView
                android:id="@+id/display_price"
                style="@style/CategoryStyle"
                android:hint="@string/hint_clothes_price" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_price" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            android:layout_weight="1"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/subtract_item"
                android:drawableLeft="@drawable/add_sign"
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/hint_clothes_quantity"
                android:inputType="number"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:maxLength="4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/add_item"
                android:drawableLeft="@drawable/add_sign"
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/category_supplier_name" />

        <!-- Name field -->
        <TextView
            android:id="@+id/display_supplier_name"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:hint="@string/hint_clothes_supplier_name" />

    </LinearLayout>
    <!-- Supplier category -->
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/category_supplier_email" />

        <!-- Name field -->
        <TextView
            android:id="@+id/display_supplier_email"
            style="@style/CategoryStyle"
            android:layout_weight="0.83"
            android:hint="@string/hint_clothes_supplier_email" />
        <Button
            android:id="@+id/contact_supplier"
            android:drawableLeft="@drawable/add_sign"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_item_button_detail"
            android:text="@string/editor_activity_title_edit_item"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/delete_item_button_detail"
            android:text="@string/delete"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>